multilang-schema-registry/shared/test/avro/negative/forward/product_v3.avsc
{
  "type": "record",
  "name": "Product",
  "namespace": "com.amazonaws.services.schemaregistry.test.forward.negative",
  "doc": "Schema incompatible with ANY previous version for FORWARD_ALL testing (COMPAT-037)",
  "fields": [
    {
      "name": "productId",
      "type": "string",
      "doc": "Changed field type from int to string - breaks FORWARD_ALL compatibility"
    },
    {
      "name": "displayName",
      "type": "string",
      "doc": "Renamed field from 'name' - incompatible change"
    }
  ]
}
